--- a/public_html/padrao/05.html
+++ b/public_html/padrao/05.html
@@ -82,11 +82,11 @@
 					<li><a href="01.html">Tópico 01: Apresentação</a></li>
                     <li><a href="02.html">Tópico 02: Contexto histórico</a></li>
                     <li><a href="03.html">Tópico 03: Agenda e o fluxo de processo para a produção de aulas</a></li>
+                    <li><a href="05.html">Tópico 05: Geração dos Computadores e Conceitos Básicos de Informática</a></li>
 
 				</ul>
 			</li>
-			<li><a href="orientacoes.html"><img src="layout/menu-anterior.png" width="20" height="20" alt="Tópico Anterior" title="Tópico Anterior" class="mouseover"/></a></li>
-			<li><a href="02.html"><img src="layout/menu-proximo.png" width="20" height="20" alt="Próximo Tópico" title="Próximo Tópico" class="mouseover"/></a></li>
+			<li><a href="03.html"><img src="layout/menu-anterior.png" width="20" height="20" alt="Próximo Anterior" title="Próximo Anterior" class="mouseover"/></a></li>
 			<li><a href="javascript:redimensionarFonte.setFontLevel('smaller')"><img src="layout/menu-fonte_reduzir.png" width="20" height="20" alt="Reduzir Fonte" title="Reduzir Fonte" class="mouseover" /></a></li>
 			<li><a href="javascript:redimensionarFonte.setFontLevel('bigger')"><img src="layout/menu-fonte_aumentar.png" width="20" height="20" alt="Aumentar Fonte" title="Aumentar Fonte" class="mouseover" /></a></li>
 			<li><a href="#" id="menu_constrate"><img src="layout/menu-contraste.png" width="20" height="20" alt="Contraste" title="Contraste" class="mouseover" /></a></li>
